Balkenfarbe nach main.css geschoben. Überflüssige Attribute entfernt

--- a/index.htm
+++ b/index.htm
@@ -45,19 +45,14 @@
       </div>
     </section>
     <section id="slide-2">
-      <div style="background-color: #343e66;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #343e66;"
-					data-top="background-color:#343e66;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-2">
         <div class="hsContainer">
           <div class="hsContent text-justify">
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-2">
-              "Luminus, fragst du dich nicht manchmal, wie ein sonnenheller Tag aussieht?".</p>
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-2">
+            <p>
+              "Luminus, fragst du dich nicht manchmal, wie ein sonnenheller Tag aussieht?".
+            </p>
+            <p>
               Diese Frage geht Schimmerie Harztropf, der kleinen Waldfee aus dem Wolfsburger Hasselbachtal, einfach nicht aus dem Kopf. Zu gern 
               möchte sie ihren geliebten Wald einmal bei Tag erleben. Doch sobald die Sonne aufgeht, fallen Waldfeen in einen tiefen Zauberschlummer.
             </p>
@@ -81,18 +76,15 @@
       </div>
     </section>
     <section id="slide-4">
-      <div style="background-color: #457056;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #457056;"
-					data-top="background-color: #457056;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-4">
         <div class="hsContainer">
           <div class="hsContent text-justify">
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-4">
+            <p>
               In der Nacht des großen Sommerfestes streift Schimmerie mit ihrem besten Freund, dem Feenwolf Luminus, durch den Wald – auf der Suche 
               nach Antworten. Dabei treffen sie auf ein paar interessante Waldbewohner wie den Waldkauz Fidelius Mausgraus, der den
-              beiden gern von seinen Erlebnissen bei Tage berichtet. </p>
+              beiden gern von seinen Erlebnissen bei Tage berichtet.
+            </p>
           </div>
         </div>
       </div>
@@ -112,9 +104,7 @@
       </div>
     </section>
     <section id="slide-6">
-      <div style="background-color: #5b6cb3;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #5b6cb3;"
-					data-top="background-color: #5b6cb3;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-6">
         <div class="hsContainer">
           <div class="hsContent text-justify">
@@ -145,19 +135,12 @@
       </div>
     </section>
     <section id="slide-8">
-      <div style="background-color: #734746;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #734746;"
-					data-top="background-color: #734746;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-8">
         <div class="hsContainer">
           <div class="hsContent text-justify">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-8 h2">
-            	Die Autorin Nicole Schaa</h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-8 h2">
+            <h2>Die Autorin Nicole Schaa</h2>
+            <p>
               ist gebürtige Heidelbergerin. Mit dem Gesellenbrief im Fotografenhandwerk in der Tasche arbeitete sie zunächst in diversen Mode- und 
               Porträtstudios. Angetrieben von ihrem Wunsch nach mehr kreativen Möglichkeiten, machte sie sich 2002 unter dem Namen NICPIC
               DESIGN als freischaffende Künstlerin in Berlin selbständig. Inzwischen lebt sie zusammen mit ihrer kleinen Familie am Stadtrand von 
@@ -198,26 +181,18 @@
       </div>
     </section>
     <section id="slide-10">
-      <div style="background-color: #b35452;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #b35452;"
-					data-top="background-color: #b35452;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-10">
         <div class="hsContainer">
           <div class="hsContent text-justify">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-10 h2">
-            	Die Illustratorin Michaela Frech</h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-10 h2">
+            <h2>Die Illustratorin Michaela Frech</h2>
+            <p>
               gestaltete die zauberhaften Charaktere und Hintergründe für &bdquo;Schimmerie Harztropf und das Sternenmeer&ldquo;. Sie zeichnet, seit 
               sie einen Stift halten kann. Ihre Werke wurden in vielen Ausstellungen gezeigt und schmücken zahlreiche Bücher. Heute
               lebt und arbeitet die Illustratorin in Fürth. Ihre Arbeitsschwerpunkte sind Kinderbücher, Fantasy und Tiermotive. Nebenbei bekommt Sie 
               bei &bdquo;PawPetShows&ldquo; Engagements als Puppenspielerin und Sprecherin. In der Full-Dome Animation
               der magischen Feensage aus dem Hasselbachtal im Auftrag des Wolfsburger Planetariums lieh Sie &bdquo;Himmeline Fadenflitz&ldquo; Ihre 
               Stimme.
-              <br />
             </p>
             <p class="text-center">Mehr über Michaela Frech auf: <a href="http://www.michaela-frech.de">www.michaela-frech.de</a></p>
           </div>
@@ -239,9 +214,7 @@
       </div>
     </section>
     <section id="slide-12">
-      <div style="background-color: #343d66;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #343d66;"
-					data-top="background-color: #343d66;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-12">
         <div class="hsContainer">
           <div class="hsContent text-justify">
@@ -301,19 +274,13 @@
       </div>
     </section>
     <section id="slide-14">
-      <div style="background-color: #5b6cb3;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #5b6cb3;"
-					data-top="background-color: #5b6cb3;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-14">
         <div class="hsContainer">
           <div class="hsContent text-justify">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-14">
-            Wolfsburg</h2>
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-14"> zählt zu den familien- 
+            <h2>Wolfsburg</h2>
+            <p>
+            	zählt zu den familien- 
             	und kinderfreundlichsten Städten Deutschlands. Zahlreiche kulturelle und sportliche Angebote speziell für Kinder und Jugendliche tragen 
             	seit vielen Jahren dazu bei, sich hier richtig wohlzufühlen. Die Unicef verlieh der Stadt das Siegel "kinderfreundliche Kommune", und 
             	mittlerweile wurde unter anderem Wolfsburgs erster Kinderbeirat erfolgreich gegründet. Abseits dessen gibt es um Wolfsburg herum etwas, 
@@ -353,15 +320,11 @@
       </div>
     </section>
     <section id="slide-16">
-      <div style="background-color: #99b37e;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #99b37e;"
-					data-top="background-color: #99b37e;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-16">
         <div class="hsContainer">
           <div class="hsContent text-justify">
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-16">
+            <p>
               Das Hasselbachtal ist Wolfsburgs beliebtes Naherholungsgebiet gleich hinter dem Steimker Berg. Sportler und Naturliebhaber nutzen die 
               verschlungenen Wege des Stadtforstes bevorzugt zum Laufen oder Walken. Quellwanderungen führen quer durch den Wald; Sitzgruppen
               an malerischen Lichtungen laden zum Verweilen ein. Auf den Spuren von Schimmerie Harztropf findet man hier die original Schauplätze
@@ -369,7 +332,8 @@
               Lesungen entlang dieser Route statt. Gute Schuhe, gute Laune und Klappstühle sind sinnvolle Mitbringsel für diese kleine Phantasiereise 
               in die Wolfsburger Feenwelt.
             </p>
-            <p class="text-center">Haben Sie Interesse an einer Lesung in der freien Natur
+            <p class="text-center">
+            	Haben Sie Interesse an einer Lesung in der freien Natur
                 <br /> und möchten gerne mehr darüber erfahren?
                 <br /> <a href="&#109;&#097;&#105;&#108;&#116;&#111;:hallo&#064;schimmerie&#045;harztropf.de">
               <span class=lelink>hallo&#064;</span>schimmerie&#045;harztropf.de</a>
@@ -393,9 +357,7 @@
       </div>
     </section>
     <section id="slide-18">
-      <div style="background-color: #cc771a;" class="bcg skrollable skrollable-between"
-					data-0="background-color:#cc771a;"
-					data-top="background-color: #cc771a;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-18">
         <div class="hsContainer">
           <div class="hsContent text-justify">
@@ -433,15 +395,11 @@
       </div>
     </section>
     <section id="slide-20">
-      <div style="background-color: #ccab15;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #ccab15;"
-					data-top="background-color: #ccab15;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-20">
         <div class="hsContainer">
           <div class="hsContent text-center">
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-20">
+            <p>
               "Schimmerie Harztropf und das Sternenmeer" ist überall im deutschen Buchhandel erhältlich.
               <br /> Speziell bei Thalia in Wolfsburg und in den umliegenden REAL-Märkten finden Sie ein größeres Sortiment in der Auslage. 
               Weitere Verkaufsstellen sind bereits in der Planung.
@@ -455,7 +413,8 @@
               <br />
               <br/>
             </p>
-            <p>Möchtest Du Schimmerie schreiben? Sie freut sich riesig
+            <p>
+            	Möchtest Du Schimmerie schreiben? Sie freut sich riesig
               <br /> über Deine Post und wird Dir ganz bestimmt eine Antwort schicken!
               <br />
               <a href="&#109;&#097;&#105;&#108;&#116;&#111;:hallo&#064;schimmerie&#045;harztropf.de">
@@ -480,9 +439,7 @@
       </div>
     </section>
     <section id="slide-22">
-      <div style="background-color: #5b6cb3;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #5b6cb3;"
-					data-top="background-color: #5b6cb3;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-22">
         <div class="hsContainer">
           <div class="hsContent text-center">
@@ -515,9 +472,7 @@
       </div>
     </section>
     <section id="slide-24">
-      <div style="background-color: #343d66;" class="bcg skrollable skrollable-between"
-					data-0="background-color: #343d66;"
-					data-top="background-color: #343d66;"
+      <div class="bcg skrollable skrollable-between"
 					data-anchor-target="#slide-24">
         <div class="hsContainer">
           <div class="hsContent text-justify">
