--- a/index.htm
+++ b/index.htm
@@ -62,8 +62,8 @@
     </section>
     <section id="slide-3" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-3">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -91,8 +91,8 @@
     </section>
     <section id="slide-5" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-5">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -121,8 +121,8 @@
     </section>
     <section id="slide-7" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-7">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -167,8 +167,8 @@
 
     <section id="slide-9" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-9">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -201,8 +201,8 @@
     </section>
     <section id="slide-11" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-11">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -261,8 +261,8 @@
 
     <section id="slide-13" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-13">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -307,8 +307,8 @@
     </section>
     <section id="slide-15" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-15">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -344,8 +344,8 @@
     </section>
     <section id="slide-17" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-17">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -382,8 +382,8 @@
     </section>
     <section id="slide-19" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-19">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -426,8 +426,8 @@
     </section>
     <section id="slide-21" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-21">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -459,8 +459,8 @@
     </section>
     <section id="slide-23" class="homeSlide">
       <div class="bcg skrollable skrollable-between"
-					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
+					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-23">
         <div class="hsContainer">
           <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
@@ -523,8 +523,6 @@
         </div>
       </div>
     </section>
-
-
   </main>
   <script src="Dateien/jquery.js"></script>
   <script>
