HTML-Elemente entschlackt
Der Großteil der Attribute wurde von Skrollr überhaupt nicht
benötigt. Das wurde gelöscht

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="krollr skrollr-desktop">
+<html class="skrollr">
 <!--<![endif]-->
 
 <head>
@@ -36,9 +36,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-anchor-target="#slide-1">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-1 h2">
+          <div class="hsContent">
             <h2>…In einer Nacht vor langer Zeit…</h2>
           </div>
         </div>
@@ -66,9 +64,7 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-3">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-3 h2">
+          <div class="hsContent">
             <h2>…Wir sind Geschöpfe der Nacht.</h2>
             <h2>Geheimnisvoll – magisch…</h2>
           </div>
@@ -95,9 +91,7 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-5">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-5 h2">
+          <div class="hsContent">
             <h2>…Schimmerie fasste sich ein Herz und flog langsam an dem Faden entlang…</h2>
           </div>
         </div>
@@ -108,13 +102,12 @@
 					data-anchor-target="#slide-6">
         <div class="hsContainer">
           <div class="hsContent text-justify">
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-6">
+            <p>
               Doch plötzlich entdecken Schimmerie und Luminus einen magischen Faden, der mitten aus dem nächtlichen Blau vor ihren Nasen baumelt – 
               und kurze Zeit später steht der ganze Himmel Kopf. Die beiden Freunde geraten in ein turbulentes Abenteuer, in dem Schimmeries
               Herzenswunsch auf ungewöhnliche Art und Weise wahr wird. Doch Unheil naht: Tag und Nacht drohen völlig durcheinander zu geraten. Ist 
-              Schimmeries Magie stark genug, alles wieder ins rechte Lot zu bringen?</p>
+              Schimmeries Magie stark genug, alles wieder ins rechte Lot zu bringen?
+            </p>
           </div>
         </div>
       </div>
@@ -156,9 +149,7 @@
               &bdquo;Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2.&rdquo;</p>
             <p class="fan fan-red text-center"> Sabine Schröter, Thalia Wolfsburg, Kinderbuchabteilung</p>
  -->
-            <p style="opacity: 0;" class="skrollable skrollable-before text-center"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-8 h2">
+            <p>
               Weitere kreative Seiten der Autorin: <a href="http://www.nicpic.de">www.nicpic.de</a></p>
           </div>
         </div>
@@ -171,11 +162,9 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-9">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-9 h2">
-            <h2>...Magische, wunderschöne Töne</h2>
-            <h2> hüllten den Platz in pure Freude...</h2>
+          <div class="hsContent">
+            <h2>...Magische, wunderschöne Töne <br />
+            	hüllten den Platz in pure Freude...</h2>
           </div>
         </div>
       </div>
@@ -205,10 +194,9 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-11">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-11 h2">
-            <h2>Full Dome<br/>Animation</h2>
+          <div class="hsContent">
+            <h2>Full Dome
+            	<br/>Animation</h2>
           </div>
         </div>
       </div>
@@ -218,18 +206,15 @@
 					data-anchor-target="#slide-12">
         <div class="hsContainer">
           <div class="hsContent text-justify">
-            <h2 style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-12">
-            Das Planetarium in Wolfsburg </h2>
-            <p class="skrollable">zeigt das im Frühjahr 2016 als Kinderbuchbuch erschienene Feenmärchen der Wolfsburger Autorin Nicole Schaa und nimmt 
+            <h2>Das Planetarium in Wolfsburg </h2>
+            <p>zeigt das im Frühjahr 2016 als Kinderbuchbuch erschienene Feenmärchen der Wolfsburger Autorin Nicole Schaa und nimmt 
             	Sie mit auf eine magische Abenteuerreise quer durch das Wolfsburger Hasselbachtal. Unter der Kuppel des Planetariums erwacht
               die Welt von Schimmerie Harztropf unter dem nächtlichen Sternenhimmel zum Leben.</p>
-            <p class="skrollable">Bekannte Sprecher wie Wolfram Eicke, Beate Ohlendorf, Cinzia und Ricardo Rizzo geben den charakterstarken Akteuren 
+            <p>Bekannte Sprecher wie Wolfram Eicke, Beate Ohlendorf, Cinzia und Ricardo Rizzo geben den charakterstarken Akteuren 
             	des Buches ihre Stimme. Für die außergewöhnlichen Kuppel-Animation  erstellte die Kinderbuch- Illustratorin Michaela Frech zusätzliche
               Fulldome - Grafiken und Panoramen. Akzentuierte Spezialeffekte, hinzugefügt von Isabell Schaffer, heben die Erzählung lebendig hervor, 
               ohne die Kinder dabei mit zu vielen Bildern zu überfordern.</p>
-            <p class="skrollable">
+            <p>
               Die eigens dafür komponierte Musik stammt aus der Feder des Wolfsburger Musikers Matthias Klingebiel. Um den richtigen Ton kümmerten 
               sich die Wolfsburger Musikschule in Zusammenarbeit mit dem Tonstudio Lübeck.</p>
 
@@ -265,9 +250,7 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-13">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-13 h2">
+          <div class="hsContent">
             <h2>Kinder, Kinder!</h2>
           </div>
         </div>
@@ -311,9 +294,7 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-15">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-15 h2">
+          <div class="hsContent">
             <h2>Naturlesung im Hasselbachtal</h2>
           </div>
         </div>
@@ -348,9 +329,7 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-17">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-17 h2">
+          <div class="hsContent">
             <h2>Kinderbuchverlag Biber &amp; Butzemann</h2>
           </div>
         </div>
@@ -361,9 +340,7 @@
 					data-anchor-target="#slide-18">
         <div class="hsContainer">
           <div class="hsContent text-justify">
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-18">
+            <p>
               In den Büchern des Kinderbuchverlages Biber &amp; Butzemann gehen kleine Helden auf große Reisen und erleben spannende Abenteuer. 
               Ferienzeit ist Lesezeit, nicht nur für die Großen. Die liebevoll illustrierten Geschichten spielen an den unterschiedlichsten
               Orten in ganz Deutschland.
@@ -386,9 +363,7 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-19">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-19">
+          <div class="hsContent">
             &nbsp;
           </div>
         </div>
@@ -430,9 +405,7 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-21">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-21 h2">
+          <div class="hsContent">
             <h2>...mit einem mäuselauten <em><strong>adieu!</strong></em> verabschiedete sich das tapfere Mäuschen und flitzte...</h2>
           </div>
         </div>
@@ -463,9 +436,7 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-23">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
-					data-anchor-target="#slide-23 h2">
+          <div class="hsContent">
             <h2> Kontakt &amp; Impressum</h2>
           </div>
         </div>
