--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
         <div class="hsContainer">
           <div class="hsContent text-justify">
             <p>
-              "Luminus, fragst du dich nicht manchmal, wie ein sonnenheller Tag aussieht?".
+              "Luminus, fragst du dich nicht manchmal, wie ein sonnenheller Tag aussieht?"
             </p>
             <p>
               Diese Frage geht Schimmerie Harztropf, der kleinen Waldfee aus dem Wolfsburger Hasselbachtal, einfach nicht aus dem Kopf. Zu gern 
