Mobile CSS angepasst. Getrennte Überschrift korrigiert
Das CSS wird für eine Auflösung <=1000px auf breitenmäßg auf 600px
festgelegt. Skrollr wird per javascript ausgeschaltet

--- a/index.htm
+++ b/index.htm
@@ -65,8 +65,8 @@
 					data-anchor-target="#slide-3">
         <div class="hsContainer">
           <div class="hsContent">
-            <h2>…Wir sind Geschöpfe der Nacht.</h2>
-            <h2>Geheimnisvoll – magisch…</h2>
+            <h2>…Wir sind Geschöpfe der Nacht.<br />
+            	Geheimnisvoll – magisch…</h2>
           </div>
         </div>
       </div>
@@ -118,8 +118,7 @@
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-7">
         <div class="hsContainer">
-          <div style="opacity: 0.61039;" class="hsContent skrollable skrollable-between"
-					data-center="opacity: 1"
+          <div class="hsContent skrollable skrollable-between"
 					data-anchor-target="#slide-7 h2">
             <h2>…strömten neugierige Sternschnuppen<br />
 			von überall her…</h2>
@@ -485,8 +484,7 @@
             </p>
             <p> Quelle: <u>http://www.e-recht24.de</u></p>
             </div>
-            <p style="opacity: 0;" class="skrollable skrollable-before"
-					data-center="opacity: 1"
+            <p class="skrollable skrollable-before"
 					data-anchor-target="#slide-24">
               Impressumsangaben gemäß § 5 TMG | Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV
             </p>
