--- a/index.htm
+++ b/index.htm
@@ -14,9 +14,10 @@
   <meta name="description" content="Das Zuhause von der Hasselbacher Waldfee Schimmerie Harztropf und ihrem Gefährten Luminus, dem Feenwolf." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
-  <link rel="stylesheet" href="Dateien/normalize.css" />
-  <link rel="stylesheet" href="Dateien/fonts.css" />
-  <link rel="stylesheet" href="Dateien/main.css" />
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/fonts.css" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/main_mobile.css" media="screen and (max-width: 54em)" />
 </head>
 
 <body style="height: 4328px;" class="loaded">
@@ -493,12 +494,17 @@
       </div>
     </section>
   </main>
-  <script src="Dateien/jquery.js"></script>
+	<script>
+		if(self != top) {
+		   top.location = self.location; 
+		}
+    </script>
+  <script src="js/jquery.js"></script>
   <script>
-    window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')
+    window.jQuery || document.write('<script src="js/jquery.js"><\/script>')
   </script>
-  <script src="Dateien/imagesloaded.js"></script>
-  <script src="Dateien/skrollr.js"></script>
-  <script src="Dateien/_main.js"></script>
+  <script src="js/imagesloaded.js"></script>
+  <script src="js/skrollr.js"></script>
+  <script src="js/_main.js"></script>
 </body>
 </html>
