--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
 					data-center="background-position: 50% 0px;"
 					data-top-bottom="background-position: 50% -100px;"
 					data-anchor-target="#slide-1">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             <h2>…In einer Nacht vor langer Zeit…</h2>
           </div>
@@ -64,7 +64,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-3">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             <h2>…Wir sind Geschöpfe der Nacht.<br />
             	Geheimnisvoll – magisch…</h2>
@@ -91,7 +91,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-5">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             <h2>…Schimmerie fasste sich ein Herz und flog langsam an dem Faden entlang…</h2>
           </div>
@@ -118,9 +118,8 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-7">
-        <div class="hsContainer">
-          <div class="hsContent skrollable skrollable-between"
-					data-anchor-target="#slide-7 h2">
+        <div class="hsContainer title-line">
+          <div class="hsContent">
             <h2>…strömten neugierige Sternschnuppen<br />
 			von überall her…</h2>
           </div>
@@ -161,7 +160,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-9">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             <h2>...Magische, wunderschöne Töne <br />
             	hüllten den Platz in pure Freude...</h2>
@@ -193,7 +192,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-11">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             <h2>Full Dome
             	<br/>Animation</h2>
@@ -249,7 +248,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-13">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             <h2>Kinder, Kinder!</h2>
           </div>
@@ -293,7 +292,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-15">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             <h2>Naturlesung im Hasselbachtal</h2>
           </div>
@@ -328,7 +327,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-17">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             <h2>Kinderbuchverlag Biber &amp; Butzemann</h2>
           </div>
@@ -362,7 +361,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-19">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             &nbsp;
           </div>
@@ -404,7 +403,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-21">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             <h2>...mit einem mäuselauten <em><strong>adieu!</strong></em> verabschiedete sich das tapfere Mäuschen und flitzte...</h2>
           </div>
@@ -435,7 +434,7 @@
 					data-top-bottom="background-position: 50% -100px;"
 					data-center-top="background-position: 50% 100px;"
 					data-anchor-target="#slide-23">
-        <div class="hsContainer">
+        <div class="hsContainer title-line">
           <div class="hsContent">
             <h2> Kontakt &amp; Impressum</h2>
           </div>
