--- a/index.htm
+++ b/index.htm
@@ -208,36 +208,45 @@
             <h2>Das Planetarium in Wolfsburg </h2>
             <p>zeigt das im Frühjahr 2016 als Kinderbuchbuch erschienene Feenmärchen der Wolfsburger Autorin Nicole Schaa und nimmt 
             	Sie mit auf eine magische Abenteuerreise quer durch das Wolfsburger Hasselbachtal. Unter der Kuppel des Planetariums erwacht
-              die Welt von Schimmerie Harztropf unter dem nächtlichen Sternenhimmel zum Leben.</p>
+              die Welt von Schimmerie Harztropf unter dem nächtlichen Sternenhimmel zum Leben.
+              </p>
             <p>Bekannte Sprecher wie Wolfram Eicke, Beate Ohlendorf, Cinzia und Ricardo Rizzo geben den charakterstarken Akteuren 
             	des Buches ihre Stimme. Für die außergewöhnlichen Kuppel-Animation  erstellte die Kinderbuch- Illustratorin Michaela Frech zusätzliche
               Fulldome - Grafiken und Panoramen. Akzentuierte Spezialeffekte, hinzugefügt von Isabell Schaffer, heben die Erzählung lebendig hervor, 
-              ohne die Kinder dabei mit zu vielen Bildern zu überfordern.</p>
+              ohne die Kinder dabei mit zu vielen Bildern zu überfordern.
+              </p>
             <p>
               Die eigens dafür komponierte Musik stammt aus der Feder des Wolfsburger Musikers Matthias Klingebiel. Um den richtigen Ton kümmerten 
-              sich die Wolfsburger Musikschule in Zusammenarbeit mit dem Tonstudio Lübeck.</p>
-
+              sich die Wolfsburger Musikschule in Zusammenarbeit mit dem Tonstudio Lübeck.
+              </p>
+			
+            <hr />
            <!-- <p class="zitat text-center">
               &bdquo;Dies sind 2 nette Sätze über das Buch. Hier kommt Nummer 2.&rdquo;
               </p>
             <p class="fan fan-light-blue text-center">
-              Dirk Schlesier, wissenschaftlicher Leiter des Planetariums in Wolfsburg</p>
+              Dirk Schlesier, wissenschaftlicher Leiter des Planetariums in Wolfsburg</p>-->
 
             <p class="zitat text-center">
-              &bdquo;Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2.&rdquo;
+              &bdquo;Schimmerie Harztropfs Geschichte ist etwas ganz Besonderes. Man kann sie gemütlich auf der Couch beim Lesen entdecken, bei einem 
+              Spaziergang im Wolfsburger Hasselbachtal oder unter dem prächtigen Sternenhimmel des Planetariums. Hierfür Bild, Stimmen und Musik 
+              abzumischen und zu arrangieren ist eine spannende Aufgabe. Vor allem, wenn man zum Schluss im wahrsten Sinne des Wortes etwas "Feenstaub" 
+              drüber pusten darf.&rdquo;
               </p>
             <p class="fan fan-light-blue text-center">
-              Isabell Schaffer, pädagogische Mitarbeiterin des Planetariums in Wolfsburg
+              Isabell Schaffer,
+              <br />Verantwortliche für die wissenschaftliche Visualisierung im Planetarium Wolfsburg
               </p>
 
             <p class="zitat text-center">
-              &bdquo;Dies sind 2 nette Sätze über das Buch/die Kuppelshow. Hier kommt Nummer 2.&rdquo;
+              &bdquo;Ein ganz zauberschönes Kinderbuch mit Illustrationen, die dich sofort einfangen und das dann auch noch in Wolfsburg spielt…
+              natürlich wollte ich für die Planetariumproduktion dabei sein und hatte sehr viel Spaß als Sprecherin der beiden so unterschiedlichen 
+              Charaktere.&rdquo;
               </p>
             <p class="fan fan-light-blue text-center">
-              Cinzia Rizzo, Sprecherin "Schimmerie" und "Lusilla Trälla"
+              Cinzia Rizzo, Sprecherin "Schimmerie Harztropf" und "Lusilla Trälla"
               <br /> hauptberuflich Sängerin und Mitarbeiterin des Tanzenden Theaters Wolfsburg
-              </p> 
-            </p> -->
+            </p>
           </div>
         </div>
       </div>
